--- a/main.html
+++ b/main.html
@@ -1,11 +1,155 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>欢迎来到我的网站</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Zhenming Shi — Academic Homepage</title>
+<meta name="description" content="Research in general relativity, black holes, and field theory." />
+<link rel="icon" href="data:," />
+<style>
+:root{--bg:#ffffff;--fg:#111;--muted:#666;--card:#f6f6f7;--link:#2563eb}
+@media (prefers-color-scheme: dark){
+  :root{--bg:#0b0b0c;--fg:#eaeaea;--muted:#9aa0a6;--card:#151517}
+}
+*{box-sizing:border-box}
+body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto}
+a{color:var(--link);text-decoration:none}
+a:hover{opacity:.8}
+.container{max-width:980px;margin:0 auto;padding:24px}
+.top{display:flex;gap:18px;align-items:center}
+.top img{width:92px;height:92px;border-radius:16px;object-fit:cover}
+h1{margin:0 0 4px 0;font-size:28px}
+.muted{color:var(--muted)}
+nav{display:flex;gap:12px;margin:12px 0 20px 0;flex-wrap:wrap}
+.btn{border:1px solid var(--muted);border-radius:10px;padding:6px 10px;color:var(--fg)}
+.grid{display:grid;grid-template-columns:1fr;gap:18px}
+.card{background:var(--card);border:1px solid #0001;border-radius:14px;padding:14px}
+.card h2{margin:0 0 8px 0;font-size:18px}
+ul{margin:8px 0;padding-left:18px}
+.small{font-size:13px}
+kbd{border:1px solid var(--muted);border-bottom-width:2px;border-radius:6px;padding:0 6px;font-family:ui-monospace,Menlo}
+footer{margin:26px 0;color:var(--muted);font-size:13px;text-align:center}
+</style>
 </head>
 <body>
-  <h1>Hello, I'm Zhenming!</h1>
-  <p>This is my personal GitHub page.</p>
+<div class="container">
+
+<!-- ===== Profile configuration ===== -->
+<script>
+window.PROFILE = {
+  name: "Zhenming Shi",
+  title: "Physics Student · Leipzig University",
+  email: "zhenming@example.com",
+  links: {
+    Scholar: "https://scholar.google.com/",
+    ORCID: "https://orcid.org/0000-0000-0000-0000",
+    GitHub: "https://github.com/yourname",
+    arXiv: "https://arxiv.org/a/xxxx.html",
+    CV: "assets/cv.pdf"
+  }
+}
+</script>
+<!-- ===== end configuration ===== -->
+
+<section class="top">
+  <img src="assets/avatar.jpg" alt="portrait">
+  <div>
+    <h1 id="name"></h1>
+    <div class="muted" id="title"></div>
+    <nav id="nav"></nav>
+  </div>
+</section>
+
+<div class="grid">
+  <article class="card">
+    <h2>About</h2>
+    <p>I am an undergraduate physics student at Leipzig University.  
+    My research interests include general relativity, black holes, and
+    field theory. I also enjoy spectroscopy experiments and knot-theoretic
+    helicity studies.</p>
+  </article>
+
+  <article class="card">
+    <h2>Publications & Preprints</h2>
+    <ul id="pubs"></ul>
+    <div class="small muted">Source: <code>data/publications.json</code></div>
+  </article>
+
+  <article class="card">
+    <h2>Talks</h2>
+    <ul id="talks"></ul>
+    <div class="small muted">Source: <code>data/talks.json</code></div>
+  </article>
+
+  <article class="card">
+    <h2>Teaching</h2>
+    <ul id="teach"></ul>
+    <div class="small muted">Source: <code>data/teaching.json</code></div>
+  </article>
+
+  <article class="card">
+    <h2>Notes & Projects</h2>
+    <input id="q" placeholder="Search keyword or #tag" style="width:100%;padding:8px 10px;margin:6px 0;border:1px solid #aaa;border-radius:10px;background:transparent;color:inherit">
+    <ul id="notes"></ul>
+    <div class="small muted">Source: <code>data/notes.json</code> · Press <kbd>/</kbd> to focus search.</div>
+  </article>
+</div>
+
+<footer>© <span id="year"></span> <span id="name2"></span> · Hosted on GitHub Pages.</footer>
+
+<script>
+const el = s => document.querySelector(s);
+const set = (s,v) => el(s).innerHTML=v;
+function liPub(p){
+  const a=p.authors?.join(', ')||'';
+  const meta=[p.venue,p.year].filter(Boolean).join(', ');
+  const links=(p.links||[]).map(x=>`<a href="${x.url}" target="_blank">${x.label}</a>`).join(' · ');
+  return `<li><b>${p.title}</b>${p.status?` <span class='small muted'>[${p.status}]</span>`:''}<br><span class="small">${a}${meta?' — '+meta:''}</span>${links?'<br>'+links:''}</li>`;
+}
+function liTalk(t){
+  const meta=[t.event,t.place,t.date].filter(Boolean).join(' · ');
+  const links=(t.links||[]).map(x=>`<a href="${x.url}" target="_blank">${x.label}</a>`).join(' · ');
+  return `<li><b>${t.title}</b><br><span class="small">${meta}</span>${links?'<br>'+links:''}</li>`;
+}
+function liTeach(t){
+  const meta=[t.term,t.role,t.institution].filter(Boolean).join(' · ');
+  const links=(t.links||[]).map(x=>`<a href="${x.url}" target="_blank">${x.label}</a>`).join(' · ');
+  return `<li><b>${t.course}</b><br><span class="small">${meta}</span>${links?'<br>'+links:''}</li>`;
+}
+function liNote(n){
+  const tags=(n.tags||[]).map(t=>`#${t}`).join(' ');
+  return `<li><a href="${n.url}" target="_blank">${n.title}</a> <span class="small muted">${tags} · ${n.date||''}</span>${n.desc?'<br><span class="small">'+n.desc+'</span>':''}</li>`;
+}
+async function load(path){try{const r=await fetch(path,{cache:'no-store'});return await r.json()}catch{return[]}}
+async function main(){
+  const P=window.PROFILE;
+  set('#name',P.name);set('#name2',P.name);set('#title',P.title);set('#year',new Date().getFullYear());
+  set('#nav',Object.entries(P.links).map(([k,v])=>`<a class="btn" href="${v}" target="_blank">${k}</a>`).join(' '));
+  const [pubs,talks,teach,notes]=await Promise.all([
+    load('data/publications.json'),
+    load('data/talks.json'),
+    load('data/teaching.json'),
+    load('data/notes.json')
+  ]);
+  set('#pubs',pubs.map(liPub).join(''));
+  set('#talks',talks.map(liTalk).join(''));
+  set('#teach',teach.map(liTeach).join(''));
+  set('#notes',notes.map(liNote).join(''));
+  const q=el('#q');
+  if(q){
+    document.addEventListener('keydown',e=>{if(e.key==='/'){e.preventDefault();q.focus()}});
+    q.addEventListener('input',()=>{
+      const s=q.value.toLowerCase();
+      const f=notes.filter(n=>{
+        const blob=(n.title+' '+(n.desc||'')+' '+(n.tags||[]).join(' ')).toLowerCase();
+        return blob.includes(s);
+      });
+      set('#notes',f.map(liNote).join(''));
+    });
+  }
+}
+main();
+</script>
+</div>
 </body>
 </html>
