Updated navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -3,53 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zhenming Shi - Homepage</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-        }
-        h1 {
-            font-size: 36px;
-            margin: 0;
-        }
-        h2 {
-            font-size: 24px;
-            margin: 5px 0;
-        }
-        p {
-            font-size: 18px;
-            margin: 10px 0;
-        }
-        nav {
-            margin: 20px 0;
-        }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #007bff;
-        }
-    </style>
+    <title>My Website</title>
 </head>
 <body>
-    <h1>Zhenming Shi</h1>
-    <h2>Undergraduate Physics Student</h2>
-    <p>Leipzig University</p>
     <nav>
-        <a href="#about">About</a>
-        <a href="#education">Education</a>
-        <a href="#research">Research</a>
-        <a href="#notes">Notes</a>
-        <a href="#cv">CV</a>
-        <a href="#contact">Contact</a>
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="research.html">Research</a></li>
+            <li><a href="notes.html">Notes</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="assets/cv/CV_Zhenming_Shi.pdf">CV</a></li>
+        </ul>
     </nav>
-    <p>Email: <a href="mailto:zhenming561@gmail.com">zhenming561@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/Zhenming561">Zhenming561</a></p>
+    <main>
+        <h1>Welcome to My Website</h1>
+        <p>This is a sample website content.</p>
+    </main>
 </body>
 </html>
