Update index.html with new homepage content.

--- a/index.html
+++ b/index.html
@@ -3,22 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Zhenming Shi - Homepage</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="notes.html">Notes</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="assets/cv/CV_Zhenming_Shi.pdf">CV</a></li>
-        </ul>
-    </nav>
-    <main>
-        <h1>Welcome to My Website</h1>
-        <p>This is a sample website content.</p>
-    </main>
+    <div class="container">
+        <header class="hero-section">
+            <div class="profile-photo-placeholder">
+                <!-- Add your photo here: assets/images/profile.jpg -->
+                <div class="photo-circle">ZS</div>
+            </div>
+            <h1>Zhenming Shi</h1>
+            <p class="subtitle">Undergraduate Physics Student</p>
+            <p class="affiliation">Leipzig University</p>
+        </header>
+
+        <nav class="main-nav">
+            <a href="about.html" class="nav-link">About</a>
+            <a href="education.html" class="nav-link">Education</a>
+            <a href="research.html" class="nav-link">Research</a>
+            <a href="notes.html" class="nav-link">Notes</a>
+            <a href="assets/cv/CV_Zhenming_Shi.pdf" class="nav-link" target="_blank">CV</a>
+            <a href="contact.html" class="nav-link">Contact</a>
+        </nav>
+
+        <footer class="contact-info">
+            <p><a href="mailto:zhenming561@gmail.com">zhenming561@gmail.com</a></p>
+            <p><a href="https://github.com/Zhenming561" target="_blank">GitHub: @Zhenming561</a></p>
+        </footer>
+    </div>
 </body>
 </html>
