Update navigation links to include section IDs

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <h3>Undergraduate Physics Student</h3>
         <p>Affiliation: Leipzig University</p>
         <nav>
-            <a href="#">About</a>
-            <a href="#">Education</a>
-            <a href="#">Research</a>
-            <a href="#">Notes</a>
+            <a href="#about">About</a>
+            <a href="#education">Education</a>
+            <a href="#research">Research</a>
+            <a href="#notes">Notes</a>
             <a href="assets/cv/CV_Zhenming_Shi.pdf">CV</a>
         </nav>
         <footer>
