--- a/notes.html
+++ b/notes.html
@@ -227,7 +227,7 @@
                             <li>Perturbation theory</li>
                         </ul>
                     </div>
-                    <a href="notes/pdfs/quantum-mechanics.pdf" class="download-btn" target="_blank">📥 Download PDF</a>
+                    <a href="notes/QM.pdf" class="download-btn" target="_blank">📥 Download PDF</a>
                 </div>
             </div>
 
