--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
     <div class="container">
         <div class="profile-photo">
-            <img src="assets/images/profile.jpg" alt="Zhenming Shi Profile Photo">
+            <img src="assets/images/IMG_4077.jpg" alt="Zhenming Shi Profile Photo">
         </div>
         <h1>Zhenming Shi</h1>
         <h3>Undergraduate Physics Student</h3>
